# oshino

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  AUTHORS.md  CNAME  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
compose/: Dockerfile  config.yaml
docs/: agents.md  augments.md  config.md  events.md  index.md  install.md  quickstart.md  riemann.md  thirdparty.md
oshino/: .env-example  __init__.py  config.py  run.py  util.py  version.py
oshino/agents/: __init__.py  consul_agent.py  http_agent.py  subprocess_agent.py  test_agent.py
oshino/augments/: __init__.py  stats.py
oshino/core/: __init__.py  admin.py  heart.py  processor.py
requirements/: release.txt  test.txt
tests/: fixtures.py  it_query.py  mocks.py  stubs.py  test_admin.py  test_agents.py  test_augment.py  test_config.py  test_core.py  test_runner.py  test_util.py
tests/data/: it_config.yml  test_config.yml
